fix: 修复最后4个编译错误（日志/泛型/方法引用）
fix: 修复最后4个编译错误（日志/泛型/方法引用）

1. GroupManager/LightUpdateTask：替换logger.debug()为logger.info("[DEBUG] ...")
2. ListCommand：tabComplete()直接返回空列表，接口添加default实现
3. SerializationUtil：泛型约束<T extends ConfigurationSerializable>，解决类型转换
4. 补充核心接口/实体类，确保依赖完整